fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -323,9 +323,10 @@ a {
 
 @media (hover: hover) and (pointer: fine) and (max-width: 850px) {
   .container div:hover{
-    color: rgb(255, 98, 124);
+    color: #ff627c;
   }
   .position{
+    left: 20%;
     width: 60%;
   }
   .headPos{
@@ -345,10 +346,11 @@ a {
 
 @media (hover: hover) and (pointer: fine) and (min-width: 851px) {
   .container div:hover{
-    color: rgb(255, 98, 124);
+    color: #ff627c;
   }
   .position{
     width: 60%;
+    left: 20%;
   }
   .headPos{
     display: flex;
